--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "immer": "^8.0.1",
+    "ini": "^1.3.6",
+    "node-notifier": "^8.0.1",
     "normalize.css": "^8.0.1",
+    "object-path": "^0.11.5",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^4.0.1",
     "styled-components": "^5.2.1"
   },
   "scripts": {
